--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.13/dist/tesseract.min.js'></script>
   <link rel="stylesheet" href="asset/css/style.css">
-  <script src="asset/js/script.js"></script>
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
 </head>
 
@@ -17,19 +16,40 @@
     <img src="asset/img/Logo Iseein.png" alt="Logo Iseein">
   </header>
   <div class="container">
-    <h2>Silahkan Pilih Provider</h2>
-      <form action="pengisi-voucher.php" method="post">
-        <label for="code">Kode Voucher</label>
-        <input type="text" name="code" id="code" placeholder="Kode Voucher">
-        <button type="submit" name="submit">Pengisi</button>
-       <div class="footer">
-        <p>Designed and Developed With ❤ By Akbarhlubis</p>
-        <sub>Made n Indonesia</sub>
-       </div> 
+    
+    <div class="pil-provider">
+      <h2>Silahkan Pilih Provider</h2>
+      <input type="radio" name="provider" value="tri" />
+      <label for="tri">Tri</label>
+      <input type="radio" name="provider" value="telkomsel" />
+      <label for="telkomsel">Telkomsel</label>
+    </div>
+
+    <div class="ui">
+      <p class="ui header">Input</p>
+      <div class="ui large fluid input">
+        <input id="input" name="input" />
+      </div>
+    </div>
+  
+    <div class="ui">
+      <p class="ui header">Preview</p>
+      <div id="preview" class="ui">
+        <p id="output"></p>
+      </div>
+    </div>
+
+    <div id="render" class="ui">
+      <input id="Proses" type="button" value="Submit" onclick="InputOutput()">
+      </div>
+    </div>
+  
+        
   </div>
   <br>
   <sub><em>*Program ini tidak disponsori oleh pihak manapun</em></sub>
   <script src="js/tesseract-ocr.js"></script>
+  <script src="asset/js/script.js"></script>
 </body>
 
 </html>
