--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <option value="smartfren">Smartfren</option>
         </select>
         <input class="input" type="text" id="inputKode" placeholder="Maksimal 16 Digit" maxlength="16" inputmode="numeric" onkeypress="return onlyNumberKey(event)">
+        <span id="charCount">0</span>
       </div>
       <input class="button" type="button" value="Proses" id="buttonProses" onclick="inputOutput()">
     </div>
