update struktur, css dan html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.13/dist/tesseract.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
-  <link rel="stylesheet" href="asset/css/style.css">
+  <link rel="stylesheet" href="components/styles/style.css">
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
 </head>
 
 <body>
   <!--   Ini Bagian Header -->
   <header>
-    <img src="asset/img/Logo Iseein.png" alt="Logo Iseein">
+    <img src="components/images/Logo Iseein.png" alt="Logo Iseein">
   </header>
 
   <div class="container">
@@ -56,9 +56,8 @@
   </div>
   <sub><em>*Program ini tidak disponsori oleh pihak manapun</em></sub>
 
-  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js'></script><script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/akbarhlubis','https://cdn.trakteer.id/images/embed/trbtn-icon.png','40');trbtn.draw(trbtnId);})();</script>
-  <script src="js/tesseract-ocr.js"></script>
-  <script src="asset/js/script.js"></script>
+  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js'></script><script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/akbarhlubis/tip','https://cdn.trakteer.id/images/embed/trbtn-icon.png','40');trbtn.draw(trbtnId);})();</script>
+  <script src="components/scripts/script.js"></script>
 </body>
 
 </html>
