--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.13/dist/tesseract.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
+  <link rel="shortcut icon" href="components/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="components/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="components/styles/style.css">
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
 </head>
