menambahkan fungsi pwa

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="shortcut icon" href="components/images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="components/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="components/styles/style.css">
+  <meta name="theme-color" content="#fff" />
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
+  <link rel="manifest" href="/manifest.json" />
 </head>
 
 <body>
@@ -58,8 +60,9 @@
   </div>
   <sub><em>*Program ini tidak disponsori oleh pihak manapun</em></sub>
 
-  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js'></script><script type='text/javascript'>(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/akbarhlubis/tip','https://cdn.trakteer.id/images/embed/trbtn-icon.png','40');trbtn.draw(trbtnId);})();</script>
+  <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js'></script><script type='text/javascript'>(function(){var trbtnId=trbtn.init('Traktir Gorengan','#be1e2d','https://trakteer.id/akbarhlubis/tip','https://cdn.trakteer.id/images/embed/trbtn-icon.png','40');trbtn.draw(trbtnId);})();</script>
   <script src="components/scripts/script.js"></script>
+  <script src="components/scripts/pwa-handler.js"></script>
 </body>
 
 </html>
