lanjut memperbaiki pwa

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="components/styles/style.css">
   <meta name="theme-color" content="#fff" />
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
+<script>navigator.serviceWorker.register("components/scripts/sw.js")</script> 
   <link rel="manifest" href="/manifest.json" />
 </head>
 
@@ -63,6 +64,7 @@
   <script type='text/javascript' src='https://cdn.trakteer.id/js/embed/trbtn.min.js'></script><script type='text/javascript'>(function(){var trbtnId=trbtn.init('Traktir Gorengan','#be1e2d','https://trakteer.id/akbarhlubis/tip','https://cdn.trakteer.id/images/embed/trbtn-icon.png','40');trbtn.draw(trbtnId);})();</script>
   <script src="components/scripts/script.js"></script>
   <script src="components/scripts/pwabuilder-sw-register.js"></script>
+  <script src="components/scripts/sw.js"></script>
 </body>
 
 </html>
