--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="components/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="components/styles/style.css">
   <script>navigator.serviceWorker.register("service-worker.js")</script>
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <title>Iseein: Pemindai dan Pengisi Voucher</title>
 </head>
 
