--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     function init() {
       if ('serviceWorker' in navigator && navigator.onLine) {
-        navigator.serviceWorker.register(BASE_URL + 'service-worker.js')
+        navigator.serviceWorker.register('service-worker.js')
           .then((reg) => {
             console.log('Registrasi service worker Berhasil', reg);
           }, (err) => {
