--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
             Salin
           </button>
         </div>
+        <button class="buka salin btn" onclick="call">Buka
+        </button>
       </div>
     </div>
 
